# open-browser

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SDK.md  index.html  package.json
demo/: index.html  manifest.json
js/: address-book.d.ts  address-book.js  agent.d.ts  agent.js  ai-provider.d.ts  ai-provider.js  api-keys.d.ts  api-keys.js  audit.d.ts  audit.js  config.d.ts  config.js  crypto.js  db.d.ts  db.js  history.d.ts  history.js  icons.d.ts  icons.js  key-cache.d.ts  key-cache.js  policy.d.ts  policy.js  price.d.ts  price.js  qrcode.d.ts  qrcode.js  rpc.d.ts  rpc.js  scrypt-noble.js  sign-and-send.d.ts  sign-and-send.js  storage.js  tx-builder.d.ts  tx-builder.js  x402.d.ts  x402.js
src/: crypto.rs  eip712.rs  lib.rs  signer.rs  storage.rs  wallet.rs
