[package]
name = "ows-browser"
version = "0.1.0"
edition = "2021"
description = "OWS Browser SDK — WebAssembly port for web apps and agents"
license = "MIT"
repository = "https://github.com/open-wallet-standard/browser"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "console",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
bip39 = { version = "2", default-features = false }
tiny-hderive = "0.3"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
hex = "0.4"
bs58 = "0.5"
bech32 = "0.11"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = "0.6"
zeroize = "1"
hmac = "0.12"
uuid = { version = "1", features = ["v4", "js"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "wasmbind"] }
blake2 = "0.10"
data-encoding = "2"
crc = "3"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
